tests/baselines/reference/parserClassDeclaration21.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration21.ts(3,5): error TS2389: Function implementation name must be '0'.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration21.ts (1 errors) ====
    class C {
        0();
        1() { }
        ~
!!! error TS2389: Function implementation name must be '0'.
    }